# The-comune

./: Cargo.toml  README.md  hash.rs  hlc.rs  merge.rs  node.rs  packet.rs  proof.rs
.github/workflows/: rust.yml
examples/: two_node_conflict_demo.rs  two_node_demo.rs
src/: belief.rs  error.rs  graph.rs  hlc.rs  lib.rs  merge.rs  node.rs  packet.rs
tests/: convergence.rs  issue5.rs
