[package]
name = "agentzk-speedline"
version = "0.2.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
hex = "0.4"
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
